--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vertical-align",
-  "main": "./lib/vertical-align",
+  "main": "./lib/main",
   "version": "0.6.1",
   "private": true,
   "description": "Vertically align lines of code",
