Add support for add-on packages
Allow language specific add-on packages to work with main package

Related to #13

--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   },
   "dependencies": {
     "extend": "^2.0.0"
+  },
+  "consumedServices": {
+    "vertical-align.provider": {
+      "description": "A package for aligning code",
+      "versions": {
+        "1.0.0": "registerProviders"
+      }
+    }
   }
 }
