Fixed `,` left and right space reversed
Fixes #14

--- a/config.json
+++ b/config.json
@@ -14,15 +14,15 @@
       "scope":      "operator|assignment"
     },
     ",": {
-      "leftSpace":  true,
-      "rightSpace": false,
+      "leftSpace":  false,
+      "rightSpace": true,
       "scope":      "delimiter",
       "multiple":   {
         "number": {
-          "alignment": "left"
+          "alignment": "right"
         },
         "string": {
-          "alignment": "right"
+          "alignment": "left"
         }
       }
     }
