--- a/config.json
+++ b/config.json
@@ -1,48 +1,62 @@
 {
-  "setting": {
-    "=": {
-      "alignment":  "left",
-      "leftSpace":  true,
-      "rightSpace": true,
-      "prefixes":   ["+", "-", "&", "|", "<", ">", "!", "~", "%", "/", "*", "."],
-      "scope":      "operator|assignment"
-    },
-    ":": {
-      "alignment":  "right",
-      "leftSpace":  false,
-      "rightSpace": true,
-      "scope":      "operator|assignment"
-    },
-    ",": {
-      "leftSpace":  false,
-      "rightSpace": true,
-      "scope":      "delimiter",
-      "multiple":   {
-        "number": {
-          "alignment": "right"
-        },
-        "string": {
-          "alignment": "left"
-        }
-      }
-    }
-  },
-  "mapping": {
-    "alignment": {
-      "title": "Padding for ",
+  "config": {
+    "=-alignment": {
+      "title": "Padding for =",
       "description": "Pad left or right of the character",
       "type": "string",
+      "default": "left",
       "enum": ["left", "right"]
     },
-    "leftSpace": {
-      "title": "Left space for ",
+    "=-leftSpace": {
+      "title": "Left space for =",
       "description": "Add 1 whitespace to the left of the character",
-      "type": "boolean"
+      "type": "boolean",
+      "default": true
     },
-    "rightSpace": {
-      "title": "Right space for ",
+    "=-rightSpace": {
+      "title": "Right space for =",
       "description": "Add 1 whitespace to the right of the character",
-      "type": "boolean"
+      "type": "boolean",
+      "default": true
+    },
+    ":-alignment": {
+      "title": "Padding for :",
+      "description": "Pad left or right of the character",
+      "type": "string",
+      "default": "right",
+      "enum": ["left", "right"]
+    },
+    ":-leftSpace": {
+      "title": "Left space for :",
+      "description": "Add 1 whitespace to the left of the character",
+      "type": "boolean",
+      "default": false
+    },
+    ":-rightSpace": {
+      "title": "Right space for :",
+      "description": "Add 1 whitespace to the right of the character",
+      "type": "boolean",
+      "default": true
+    },
+    ",-leftSpace": {
+      "title": "Left space for ,",
+      "description": "Add 1 whitespace to the left of the character",
+      "type": "boolean",
+      "default": false
+    },
+    ",-rightSpace": {
+      "title": "Right space for ,",
+      "description": "Add 1 whitespace to the right of the character",
+      "type": "boolean",
+      "default": true
     }
+  },
+  "privateConfig": {
+    "=-prefixes": ["+", "-", "&", "|", "<", ">", "!", "~", "%", "/", "*", "."],
+    "=-scope": "operator|assignment",
+    ":-scope": "operator|assignment",
+    ",-scope": "delimiter",
+    ",-multiple-number-alignment": "right",
+    ",-multiple-string-alignment": "left"
   }
 }
