--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "aligner",
   "main": "./lib/main",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "private": true,
   "description": "Easily align multi-line with support for different operators and custom configurations (Previously vertical-align)",
   "activationCommands": {
-    "atom-text-editor": ["aligner:align"]
+    "atom-text-editor": [
+      "aligner:align"
+    ]
   },
   "repository": "https://github.com/adrianlee44/atom-aligner",
   "license": "MIT",
