--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "./lib/main",
   "version": "0.14.0",
   "private": true,
-  "description": "Easily align multi-line with support for different operators and custom configurations (Previously vertical-align)",
+  "description": "Easily align multi-line with support for different operators and custom configurations",
   "activationCommands": {
     "atom-text-editor": [
       "aligner:align"
