--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "main": "./lib/main",
   "version": "0.15.0",
   "private": true,
-  "description": "Easily align multi-line with support for different operators and custom configurations",
+  "description": "Easily align multiple lines and blocks with support for different operators and custom configurations",
+  "keywords": [
+    "aligner",
+    "alignment",
+    "align",
+    "cursor",
+    "selection"
+  ],
   "repository": "https://github.com/adrianlee44/atom-aligner",
   "license": "MIT",
   "engines": {
