--- a/config.json
+++ b/config.json
@@ -60,7 +60,7 @@
   "privateConfig": {
     "=-prefixes": ["+", "-", "&", "|", "<", ">", "!", "~", "%", "/", "*", "."],
     "=-scope": "operator|assignment",
-    ":-scope": "operator|assignment|separator",
+    ":-scope": "operator|assignment|separator|punctuation",
     ",-scope": "delimiter",
     ",-multiple-number-alignment": "right",
     ",-multiple-string-alignment": "left"
