Add aligner-javascript as dependency

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
       }
     }
   },
+  "package-deps": [
+    "aligner-javascript"
+  ],
   "configSchema": {
     "alignComments": {
       "title": "Align comments",
