Add package dependencies to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: objective-c
 env:
   - ATOM_CHANNEL=stable
   - ATOM_CHANNEL=beta
+  - APM_TEST_PACKAGES="aligner-javascript aligner-coffeescript"
 
 script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
