--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 env:
-  - ATOM_CHANNEL=stable APM_TEST_PACKAGES="aligner-javascript aligner-coffeescript"
-  - ATOM_CHANNEL=beta APM_TEST_PACKAGES="aligner-javascript aligner-coffeescript"
+  - ATOM_CHANNEL=stable APM_TEST_PACKAGES="aligner-javascript aligner-coffeescript aligner-scss"
+  - ATOM_CHANNEL=beta APM_TEST_PACKAGES="aligner-javascript aligner-coffeescript aligner-scss"
 
 script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
